--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
+<HTML>
+<HEAD>
+<TITLE>DIMITRI’s WEBSITE</TITLE>
+</HEAD>
+<BODY BGCOLOR="FFFFFF">
+<CENTER><IMG SRC="clouds.jpg" ALIGN="BOTTOM"> </CENTER>
+<HR>
+<a href="http://google.com">GOOGLE</a>
+is a link to another nifty site
+<H1>My A levels</H1>
+<H2>This is a Medium Header</H2>
+Send me mail at <a href=“dimichamay@gmail.com”>
+support@yourcompany.com</a>.
+<P> ZEN!
+<P> <B>MATHS</B>
+<BR> <B><I>This is a new sentence without a paragraph break, in bold italics.</I></B>
+<HR>
+</BODY>
+</HTML>
 
+  
