--- a/index.html
+++ b/index.html
@@ -5,15 +5,12 @@
 <BODY BGCOLOR="FFFFFF">
 <CENTER><IMG SRC="clouds.jpg" ALIGN="BOTTOM"> </CENTER>
 <HR>
-<a href="http://google.com">GOOGLE</a>
-is a link to another nifty site
-<H1>My A levels</H1>
-<H2>This is a Medium Header</H2>
-Send me mail at <a href=“dimichamay@gmail.com”>
-support@yourcompany.com</a>.
-<P> ZEN!
-<P> <B>MATHS</B>
-<BR> <B><I>This is a new sentence without a paragraph break, in bold italics.</I></B>
+<H1>Dimitri Website Simple</H1>
+<H2>My A-levels</H2>
+
+<P> <B>Maths, Further Maths, Physics & French</B>
+<BR> <I>Our school does not offer computer science A-level therefore the best option was evidently to do as much maths as
+ is key to most aspects of computer science anyway, as well as being very interesting.</I>
 <HR>
 </BODY>
 </HTML>
