--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
  is key to most aspects of computer science anyway, as well as being very interesting.</I>
 <HR>
 </BODY>
+ <div id="container" class="container">
+  <canvas id="demo-canvas"></canvas>
+</div>
 </HTML>
+ 
 
   
