--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <H1>Dimitri Website Simple</H1>
 <H2>My A-levels</H2>
 
-<P> <B>Maths, Further Maths, Physics & French</B>
+<P> <B>Maths, Further Maths, Physics and French</B>
 <BR> <I>Our school does not offer computer science A-level therefore the best option was evidently to do as much maths as
  is key to most aspects of computer science anyway, as well as being very interesting.</I>
 <HR>
@@ -16,6 +16,22 @@
  <div id="container" class="container">
   <canvas id="demo-canvas"></canvas>
 </div>
+ <!DOCTYPE html>
+<html>
+<head>
+<style>
+img { 
+    width:100%; 
+}
+</style>
+</head>
+<body>
+
+<img src="https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX9862371.jpg"  style="width:250px;height:250px;">
+<img src="https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX9862371.jpg"  width="250" height="250">
+
+</body>
+</html>
 </HTML>
  
 
