--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <BODY BGCOLOR="FFFFFF">
 <CENTER><IMG SRC="clouds.jpg" ALIGN="BOTTOM"> </CENTER>
 <HR>
+<img src="http://www.dq995.com/data/out/35/901009.jpg"  style="width:1000px;height:1000px;">
 <H1>Dimitri Website Simple</H1>
 <H2>My A-levels</H2>
 
@@ -25,11 +26,6 @@ img {
 }
 </style>
 </head>
-<body>
-
-<img src="https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX9862371.jpg"  style="width:1000px;height:1000px;">
-
-</body>
 </html>
 </HTML>
  
