--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
 <BODY BGCOLOR="FFFFFF">
 <CENTER><IMG SRC="clouds.jpg" ALIGN="BOTTOM"> </CENTER>
 <HR>
-<img src="http://www.dq995.com/data/out/35/901009.jpg"  style="width:1000px;height:1000px;">
+<div class="image">
+ 
+<img src="http://www.dq995.com/data/out/35/901009.jpg"  style="width:1000px;height:1000px;"/>
 <H1>Dimitri Website Simple</H1>
 <H2>My A-levels</H2>
 
 <P> <B>Maths, Further Maths, Physics and French</B>
 <BR> <I>Our school does not offer computer science A-level therefore the best option was evidently to do as much maths as
  is key to most aspects of computer science anyway, as well as being very interesting.</I>
+ </div>
 <HR>
 </BODY>
  <div id="container" class="container">
