--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <HR>
 <div class="wrap">
       <div>
-      <img src="Pictures/titlepic.jpg" width="1035" height="200">
+      <img src="http://freedesignfile.com/upload/2017/01/Light-blue-tech-background-vector-06.jpg" width="1035" height="200">
       <h1 class="Dimitri Website Simple"></h1>
      
 <H1>Dimitri Website Simple</H1>
