--- a/index.html
+++ b/index.html
@@ -3,12 +3,8 @@
 <TITLE>DIMITRI’s WEBSITE</TITLE>
 </HEAD>
 <BODY BGCOLOR="FFFFFF">
-<CENTER><IMG SRC="clouds.jpg" ALIGN="BOTTOM"> </CENTER>
+<CENTER><IMG SRC="http://freedesignfile.com/upload/2017/01/Light-blue-tech-background-vector-06.jpg" ALIGN="BOTTOM"> </CENTER>
 <HR>
-<div class="wrap">
-      <div>
-      <img src="http://freedesignfile.com/upload/2017/01/Light-blue-tech-background-vector-06.jpg" width="1035" height="200">
-      <h1 class="Dimitri Website Simple"></h1>
      
 <H1>Dimitri Website Simple</H1>
 <H2>My A-levels</H2>
@@ -17,7 +13,6 @@
 <BR> <I>Our school does not offer computer science A-level therefore the best option was evidently to do as much maths as
  is key to most aspects of computer science anyway, as well as being very interesting.</I>
 
-</div>
 <HR>
 </BODY>
  <!DOCTYPE html>
