--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 
 <HR>
 </BODY>
+     
+<div id="container" class="container">
+  <canvas id="demo-canvas"></canvas>
+</div>
+     
  <!DOCTYPE html>
 <html>
 <head>
