--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <H2>My A-levels</H2>
 
 <P> <B>Maths, Further Maths, Physics and French</B>
-<BR> <I>Our school does not offer computer science A-level therefore the best option was evidently to do as much maths as
+<BR> <I>Our school does not offer computer science A-level therefore the best option was evidently to do as much maths as it
  is key to most aspects of computer science anyway, as well as being very interesting.</I>
 
 <HR>
